--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_util.c:
+	* dae/opd_util.h:
+	* dae/oprofiled.c: 
+	* pp/oprofpp.c: 
+	* pp/opf_filter.cpp: 
+	* configure.in: enable __builtin_expect, fix popt problem
+
+	* pp/oprof_convert.c: small fixes
+ 
+	* op_events.c: shorten event descriptions for GUI 
+
+	* gui/*: many more updates
+ 
+	* pp/Makefile.in: fix
+ 
 2001-09-21  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: removed over-verbose line
