--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* gui/Makefile.in:
+	* gui/oprof_start_config.h: 
+	* gui/oprof_start_config.cpp: 
+	* gui/oprof_start_util.h: 
+	* gui/oprof_start_util.cpp: 
+	* gui/oprof_start.h: 
+	* gui/oprof_start.cpp: new file for util functions
+ 
+2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/opd_util.c:
 	* dae/opd_util.h:
 	* dae/oprofiled.c: 
