--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
 
+	* oprofile.h:
+	* op_x86.c: support for 2.4.10
+ 
+2001-09-23  John Levon  <moz@compsoc.man.ac.uk>
+
 	* gui/oprof_start.h:
 	* gui/oprof_start.cpp: rework validator stuff a bit
  
