robustness for script a little more

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-24  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/op_start: make a little more robust
+ 
+2001-09-24  John Levon  <moz@compsoc.man.ac.uk>
+
 	* include/sstream:
 	* Makefile.in:
 	* configure.in:
