temp fix for compile error. philippe - iterator on std::vector<const char *> is not same as const char **

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-24  John Levon  <moz@compsoc.man.ac.uk>
 
+	* pp/opf_filter.cpp: "fix" compile error
+ 
+2001-09-24  John Levon  <moz@compsoc.man.ac.uk>
+
 	* gui/oprofile:
 	* gui/Makefile.in: remove old gui
  
