--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2001-09-26  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/Makefile.in: increase level of warning
+	* pp/oprof_convert.c: minor fix to avoid warning
+	* dae/opd_util.c: ditto
+	* pp/oprofpp.c: get_linenr() never return null in
+	  filename  (fix bug #464482). symcomp() ensure
+	  correct vma comparison (fix #464093)
+	* dae/opd_util.c: minor fixe in opd_poptGetContext()
+	* gui/oprof_start.cpp: minor cleanup
+
 2001-09-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/op_stop:
