--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-09-26  John Levon  <moz@compsoc.man.ac.uk>
+
+	* configure.in: remove broken bit
+
+	* pp/Makefile.in: fix options
+ 
+	* doc/oprofile.sgml: minor changes
+ 
 2001-09-26  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/Makefile.in: increase level of warning
