--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-27  John Levon  <moz@compsoc.man.ac.uk>
 
+	* gui/oprof_start_util.cpp: fix crasher bug
+ 
+2001-09-27  John Levon  <moz@compsoc.man.ac.uk>
+
 	* gui/oprof_start.h:
 	* gui/oprof_start.cpp: get per-counter config working
  
