--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2001-09-28  John Levon  <moz@compsoc.man.ac.uk>
+
+	* various files: the footer is now a header !
+
+	* dae/opd_start.c: fix msync !!
+
+	* gui/oprof_start.cpp:
+	* gui/oprof_start_util.h:
+	* gui/oprof_start_util.cpp: better default event count
+	  value. Save CPU type to oprofile file.
+
 2001-09-28  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml: oops, correct bad merging with
