--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,10 @@
 
 2001-09-28  Philippe Elie  <ph_e@club-internet.fr>
 
+	* pp/opf_filter.c: fix op_to_source [-a] [-s]
+
+2001-09-28  Philippe Elie  <ph_e@club-internet.fr>
+
 	* doc/oprofile.sgml: oops, correct bad merging with
  	  John's last update.
 
