--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2001-09-30  Philippe Elie  <ph_e@club-internet.fr>
 
+	* pp/opf_container.cpp:
+	* pp/opf_filter.cpp:
+	* pp/oprofpp.cpp:
+	* pp/oprofpp.h: cleanup
+
+2001-09-30  Philippe Elie  <ph_e@club-internet.fr>
+
 	* gui/oprof_start.cpp:
 	* gui/oprof_start.h:
 	* gui/ui/oprof_start.base.ui: cleanup
