--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-01  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/opf_container.cpp:
+	* pp/opf_filter.h: comment
+	* pp/opf_filter.cpp: speed-up
+
 2001-09-30  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_container.cpp:
