--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-02  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+
+	* configure.in: -> 0.0.5 for release
+ 
 2001-10-01  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_container.cpp:
