--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2001-10-02  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml: fix
+
+	* Makefile.in: dist fix
+ 
+2001-10-02  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
 
 	* configure.in: -> 0.0.5 for release
