--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
 2001-10-03  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.1.in:
