--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-10-05  Philippe Elie  <ph_e@club-internet.fr>
+
+	* doc/oprofile.1.in:
+	* doc/oprofile.sgml:
+	* pp/op_to_source:
+	* pp/opf_filter.cpp: implement --output and --no-output to
+ 	  allow output file generation filtering
+
 2001-10-04  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
