--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-11  Philippe Elie  <ph_e@club-internet.fr>
+
+	* doc/oprofile.sgml
+	* doc/oprofile.1.in
+	* pp/opf_filter: make --output and --no-output more intuitive
+
 2001-10-09  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml:
