--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2001-10-12  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* doc/oprofile.sgml: new docs for annotation filter
+ 
+2001-10-12  John Levon  <moz@compsoc.man.ac.uk>
+
 	* pp/opf_filter.cpp: make output filters more like diff (needs doc),
 	  briefer info message
  
