--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-13  John Levon  <moz@compsoc.man.ac.uk>
+
+	* configure.in: 0.0.6 has been released -> 0.0.7cvs
+ 
 2001-10-12  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
