--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.h: fix likely() macro
+ 
 2001-10-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
