mandrake workaround #1 - please test on kernels 2.4.8 and below if you have a tree.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2001-10-16  John Levon  <moz@compsoc.man.ac.uk>
 
+	* configure.in:
+	* oprofile.h: workaround for Mandrake randomly
+	  back-porting things.
+ 
+2001-10-16  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/opd_proc.c:
 	* gui/oprof_start.cpp:
 	* gui/oprof_start_config.cpp:
