--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-17  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: save original counter setup
+	  and restore on unload (bug #464094)
+
 2001-10-16  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in:
