--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-18  John Levon  <moz@compsoc.man.ac.uk>
+
+	* configure.in: workaround #2, hopefully fixing
+	  Mandarke (bug #471448)
+ 
 2001-10-17  John Levon  <moz@compsoc.man.ac.uk>
 
 	* oprofile.c: don't mask when restoring MSR values
