--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-10-25  H. J. Lu  <hjl@users.sf.net>
+
+	* configure.in: better version.h workaround
+
+	* doc/*.1:
+	* doc/Makefile.in: better .so manpage install
+
 2001-10-25  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml: minor change.
