--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2001-10-25  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Makefile.in:
+	* doc/Makefile.in:
+	* dae/Makefile.in:
+	* pp/Makefile.in:
+	* gui/Makefile.in: add $DESTDIR to prefix (part from
+	  H.J. Lu)
+ 
 2001-10-25  H. J. Lu  <hjl@users.sf.net>
 
 	* configure.in: better version.h workaround
