--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-25  Philippe Elie  <ph_e@club-internet.fr>
+
+	* configure.in: fix version.h checking for gcc 2.91.66
+
 2001-10-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Makefile.in:
