--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-10-26  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
+2001-10-26  H. J. Lu <hjl@users.sf.net>
+
+	* Makefile.in: use $(LD) not ld
+ 
 2001-10-25  Philippe Elie  <ph_e@club-internet.fr>
 
 	* configure.in: fix version.h checking for gcc 2.91.66
