--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-30  John Levon  <moz@compsoc.man.ac.uk>
+
+	* op_x86.c: complain properly about lAPIC-less
+	  machines
+ 
 2001-10-26  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
