--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-10-30  John Levon  <moz@compsoc.man.ac.uk>
 
+	* Move module code into module/ subdir. Bye
+	  bye CVS history :/
+ 
+2001-10-30  John Levon  <moz@compsoc.man.ac.uk>
+
 	* op_x86.c: complain properly about lAPIC-less
 	  machines
  
@@ -23,7 +28,7 @@
 	* pp/Makefile.in:
 	* gui/Makefile.in: add $DESTDIR to prefix (part from
 	  H.J. Lu)
- 
+
 2001-10-25  H. J. Lu  <hjl@users.sf.net>
 
 	* configure.in: better version.h workaround
