--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-31  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module.oprofile.c: add comment about unfixable
+	  races.
+ 
 2001-10-30  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Move module code into module/ subdir. Bye
