--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-03  Philippe Elie  <ph_e@club-internet.fr>
+
+	* modules/oprofile.h: add a sysctl struct to hold
+	  all sysctl set-able variable
+	
+	* modules/oprofile.c: two bugs fixes.
+
 2001-11-02  Philippe Elie  <ph_e@club-internet.fr>
 
 	* modules/oprofile.h: minor cleanup
