--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-05  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+
+	* module/oprofile.c: fix nr_interrupts sysctl
+
 2001-11-04  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/op_start:
