--- a/TODO
+++ b/TODO
@@ -2,13 +2,16 @@
 ---------------
  
 o I'm sick of these crappy makefiles. Let's see if we can use automake as well
-  as autoconf.
+  as autoconf. At least for user-space stuff.
  
 o determine where we need ctx_sw_on/off to prevent pre-emption + test
  
 o implement proc->old_exec
  
 o can we provide a small setuid helper for starting/stopping/flushing the profiler ?
+  is it a good idea ?
+ 
+o move from racy sysctl to procfs, if it can be done nicely
  
 Later
 -----
@@ -23,11 +26,8 @@ Correctness
 -----------
 
 o check chroot() processes and the path hash stuff
-o There is no need for the daemon to run as root as long as every binary image
-  is readable ...
 o negative process entries in the daemon - a fork() into the pid would always succeed,
   in the meantime count the missed samples, possibly try to get info via /proc again ...
-o why the overflow message at 12k ints/sec on do_dump() ? 
 
 o maybe we should support a CPU mask for enabling counters (useful with
   processor pinning ?) 
