--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2001-11-06  John Levon  <moz@compsoc.man.ac.uk>
 
+	* configure.in:
+	* module/oprofile.h:
+	* module/oprofile.c: support for hard_get_current()
+ 
+2001-11-06  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/oprofile.h:
 	* module/oprofile.c: make allow_unload exist for UP
 	  too (default to 1)
