--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2001-11-06  Philippe Elie  <ph_e@club-internet.fr>
+
+	* doc/oprofile.1.in: reformat options
+	* doc/oprofile.sgml: clarify options that require argument.
+	  Document short option
+
+	* gui/oprof_start_util.cpp: fix basename()
+
+	* pp/oprofpp.cpp:
+	* pp/oprofpp.h
+	* pp/opf_filter.cpp: better options handling
+
+	* module/oprofile.c: update one comment
+
 2001-11-06  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in:
