--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
 
 	* module/oprofile.c: update one comment
 
+	* TODO: update
+
 2001-11-06  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in:
