--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-11-07  John Levon  <moz@compsoc.man.ac.uk>
 
+	* configure.in: bump to 0.0.7
+ 
+2001-11-07  John Levon  <moz@compsoc.man.ac.uk>
+
 	* configure.in:
 	* module/oprofile.h:
 	* module/oprofile.c: fail if hard_get_current() exists
