--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-27  Philippe Elie  <ph_e@club-internet.fr>
+
+	* configure.in:
+	* pp/Makefile.in: work-around for gcc 3.0 and bfd pre-1998
+
+	* doc/oprofile.sgml: typo
+
 2001-11-26  Philippe Elie  <ph_e@club-internet.fr>
 
 	* Rules.make.in: new to add autodeps and share commons
