--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-30  Philippe Elie  <ph_e@club-internet.fr>
+
+	* configure.in: cvs add Rules.make.in.
+
+2001-11-30  Dave Jones <davej@suse.de>
+
+	* configure.in: suppress reference to an inexistant
+	  Rules.make.in
+
 2001-11-29  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/oprofpp_util.cpp: do not remove leading underscore to
