op_time: a new utility to see ratio of samples for each samples files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2001-12-01  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/opd_proc.c:
+	* dae/opd_util.c:
+	* dae/opd_util.h:
+	* dae/oprofiled.c: backup if needed old samples files
+	  in a separate directory
+
+	* pp/oprofpp.h:
+	* pp/oprofpp_util.cpp: cleanup + minor buglet fix
+
+	* util/file_manip.h:
+	* util/file_manip.cpp: create_file_list() new to create
+	  a list of all the file in a directory
+
+	* pp/op_time.cpp: new utility, not yet documented.
+	* pp/Makefile.in: handle op_time
+
+	* doc/oprofile.sgml: minor change on how to buid and
+	  install oprofile
+
 2001-11-30  Philippe Elie  <ph_e@club-internet.fr>
 
 	* configure.in: cvs add Rules.make.in.
