--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-06  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/oprofiled.h:
+	* dae/opd_proc.c: separate stats for kernel
+	  and modules address space and minor cleanup
+
 2001-12-05  Philippe Elie  <ph_e@club-internet.fr>
 
 	* Rules.make.in:
