update to do a little

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-09  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
 2001-12-09  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_proc.c: verbprintf() what cause the
