--- a/TODO
+++ b/TODO
@@ -1,30 +1,42 @@
 0.0.8 task list
 ---------------
  
+o prepare for rtc:
+	- move apic init to module init
+	- export proc type sysctl
+	- remove user-space proc type code
+	- probe module on start to get proc type
+	- generalise module start/stop/interrupt code (code move)
+
+o investigate our op_hash: hit/miss distributions etc.
+ 
 o determine where we need ctx_sw_on/off to prevent pre-emption + test
  
-o can we provide a small setuid helper for starting/stopping/flushing the profiler ?
-  is it a good idea ?
- 
-o move from racy sysctl to procfs, if it can be done nicely
-
 o move .oprofile to name=value pairs to avoid conflicts on change.
  
 Later
 -----
 
+o move from racy sysctl to procfs, if it can be done nicely
+
+o can we provide a small setuid helper for starting/stopping/flushing the profiler ?
+  is it a good idea ?
+ 
 o Bob's rtc patch ?
  
+o can we add some code for linux kernel spinlock contention in .text.lock ?
+
 o pentium 4 patches ?
  
 o post-prof GUI ? (big job)
 
-o difference between two profile session. Difference must be made at source level. (This is a part of post-prof)
+o difference between two profile session. Difference must be made at source level. 
+  (This is a part of post-prof)
 
 o integrate dasm, probably the best way is to allow to fall back to objdump.
 
 o turn (or only compile) daemon in C++ to allow more code sharing with pp/gui
- is it a good idea ?
+  is it a good idea ?
 
 o use a filelock rather a sleep to synchronize op_start and daemon.
 
@@ -48,5 +60,7 @@ o can we fold in the "untouched sample entry" case in hash table to another case
 WBNI
 ----
 
+o feature request: show percent of total samples on an image e.g. glibc took 43% of all samples
+  taken 
 o we don't really need a vmlinux file during profiling ...
 o Other x86 processors
