--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2001-12-09  John Levon  <moz@compsoc.man.ac.uk>
 
+	* configure.in: add FIXME comment
+
+	* util/file_manip.h: add FIXME comment, 
+	  avoid warning with //
+ 
+2001-12-09  John Levon  <moz@compsoc.man.ac.uk>
+
 	* TODO: update
  
 2001-12-09  Philippe Elie  <ph_e@club-internet.fr>
