--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-10  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/oprofiled.c: fix sigprocmask() blooper
+ 
 2001-12-09  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update again
