--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-14  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/opd_proc.c: memory leak fix in opd_init_images()
+
 2001-12-12  Philippe Elie  <ph_e@club-internet.fr>
 
 	* module/oprofile.h: change slightly op_hash()
