--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-18  Dave Jones <davej@suse.de>
+
+	* Makefile.in: Make documentation build again.
+
 2001-12-14  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_proc.c: memory leak fix in opd_init_images()
